--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
               <img src="./assets/images/b1.png" alt="" />
             </div>
             <div class="product-details">
-              <a href="./product-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
+              <a href="./blog-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
               <p class="product-price">
                 Tháng 3 này là tháng của các nàng đó, vậy nên hãy chăm sóc bản thân thật kĩ chuẩn bị một ngoại hình rạng rỡ để...
               </p>
@@ -69,7 +69,7 @@
               <img src="./assets/images/b2.png" alt="" />
             </div>
             <div class="product-details">
-              <a href="./product-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
+              <a href="./blog-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
               <p class="product-price">
                 Tháng 3 này là tháng của các nàng đó, vậy nên hãy chăm sóc bản thân thật kĩ chuẩn bị một ngoại hình rạng rỡ để...
               </p>
@@ -83,7 +83,7 @@
               <img src="./assets/images/b3.png" alt="" />
             </div>
             <div class="product-details">
-              <a href="./product-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
+              <a href="./blog-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
               <p class="product-price">
                 Tháng 3 này là tháng của các nàng đó, vậy nên hãy chăm sóc bản thân thật kĩ chuẩn bị một ngoại hình rạng rỡ để...
               </p>
@@ -97,7 +97,7 @@
               <img src="./assets/images/b4.png" alt="" />
             </div>
             <div class="product-details">
-              <a href="./product-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
+              <a href="./blog-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
               <p class="product-price">
                 Tháng 3 này là tháng của các nàng đó, vậy nên hãy chăm sóc bản thân thật kĩ chuẩn bị một ngoại hình rạng rỡ để...
               </p>
@@ -111,7 +111,7 @@
               <img src="./assets/images/b5.png" alt="" />
             </div>
             <div class="product-details">
-              <a href="./product-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
+              <a href="./blog-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
               <p class="product-price">
                 Tháng 3 này là tháng của các nàng đó, vậy nên hãy chăm sóc bản thân thật kĩ chuẩn bị một ngoại hình rạng rỡ để...
               </p>
@@ -126,7 +126,7 @@
               <img src="./assets/images/b6.png" alt="" />
             </div>
             <div class="product-details">
-              <a href="./product-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
+              <a href="./blog-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
               <p class="product-price">
                 Tháng 3 này là tháng của các nàng đó, vậy nên hãy chăm sóc bản thân thật kĩ chuẩn bị một ngoại hình rạng rỡ để...
               </p>
@@ -151,7 +151,7 @@
               <img src="./assets/images/banner.png" alt="" />
             </div>
             <div class="product-details">
-              <a href="./product-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
+              <a href="./blog-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
               <p class="product-price">
                 Tháng 3 này là tháng của các nàng đó, vậy nên hãy chăm sóc bản thân thật kĩ chuẩn bị một ngoại hình rạng rỡ để...
               </p>
@@ -165,7 +165,7 @@
               <img src="./assets/images/b7.png" alt="" />
             </div>
             <div class="product-details">
-              <a href="./product-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
+              <a href="./blog-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
               <p class="product-price">
                 Tháng 3 này là tháng của các nàng đó, vậy nên hãy chăm sóc bản thân thật kĩ chuẩn bị một ngoại hình rạng rỡ để...
               </p>
@@ -179,7 +179,7 @@
               <img src="./assets/images/b8.png" alt="" />
             </div>
             <div class="product-details">
-              <a href="./product-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
+              <a href="./blog-detail.html" class="product-name">THÁNG 3 RẠNG RỠ HƠN VỚI CÁC CHECKLIST NÂNG TẦM NHAN SẮC</a>
               <p class="product-price">
                 Tháng 3 này là tháng của các nàng đó, vậy nên hãy chăm sóc bản thân thật kĩ chuẩn bị một ngoại hình rạng rỡ để...
               </p>
