--- a/register.html
+++ b/register.html
@@ -105,8 +105,9 @@
                   <span class="error" id="phoneError"></span>
                 </div>
               </div>
-              <div class="product-button">
-                <button type="submit">Đăng ký</button>
+              <div class="product-button" style="display: flex; align-items: center">
+                <a href="./login.html">Đăng nhập</a>
+                <button type="submit" style="margin-left: 2rem">Đăng nhập</button>
               </div>
             </form>
           </div>
