--- a/blog-detail.html
+++ b/blog-detail.html
@@ -31,12 +31,12 @@
           <div class="other">
             <ul>
               <li>
-                <a href="#">
+                <a href="./register.html">
                   <img src="./assets/images/user.png" alt="" />
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="./cart.html">
                   <img src="./assets/images/cart.png" alt="" />
                 </a>
               </li>
